[package]
name = "yb"
version = "0.0.10"
authors = ["Chris Laplante <chris.laplante@agilent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytebraise = { version = "0.1.2" }

ansi_term = "0.12.1"
atty = "0.2.14"
clap = { version = "3.2.6", features = ["derive"] }
color-eyre = { git = "https://github.com/chris-laplante/color-eyre.git", branch = "cpl/suppress_backtrace" }
console = "0.15.0"
enum_dispatch = "0.3.8"
eyre = "0.6"
flate2 = "1.0.24"
git2 = "0.15.0"
itertools = "0.10.3"
indicatif = { version = "0.17.0", features = ["improved_unicode"] }
coredump = "0.1.1"
lazy_static = "1.4.0"
libc = "0.2.126"
maplit = "1.0.2"
once_cell = "1.12.0"
openssl-sys = { version = "0.9.74", features = ["vendored"] }
pathdiff = "0.2.1"
pretty_assertions = "1.2.1"
prettytable-rs = "0.8.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.9.2"
serde_path_to_error = "0.1.7"
slotmap = "1.0.6"
tar = "0.4.38"
tempfile = "3.3.0"
#time = "0.1.44"
toolshed = "0.8.1"
tracing = "0.1"
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
version-compare = "0.1.0"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.0.4"
