[package]
name = "concurrent_git_pool_proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
syn = { version = "1.0.101", features = ["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.46"
tokio = { version = "1" }

[dev-dependencies]
concurrent_git_pool = { path = "../concurrent_git_pool" }
