[package]
name = "yb"
version = "0.0.13"
authors = ["Chris Laplante <chris.laplante@agilent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytebraise = { version = "0.1.3" }
concurrent_git_pool = { path = "../concurrent_git_pool" }
assert_cmd = "2"
async-trait = "0.1.81"
clap = { version = "3", features = ["derive"] }
color-eyre = { git = "https://github.com/chris-laplante/color-eyre.git", branch = "cpl/suppress_backtrace" }
console = "0.15.8"
coredump = "0.1.2"
dialoguer = "0.10"
enum_dispatch = "0.3.13"
eyre = "0.6"
git2 = "0.17.2"
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
itertools = "0.10.5"
lazy_static = "1"
maplit = "1"
openssl-sys = { version = "0.9.103", features = ["vendored"] }
pathdiff = "0.2.1"
self_update = { version = "0.36.0", features = ["archive-tar", "compression-flate2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
slotmap = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"

[package.metadata.cargo-machete]
ignored = ["openssl-sys"]