[package]
name = "yb"
version = "0.0.14"
authors = ["Chris Laplante <chris.laplante@agilent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytebraise = { version = "0.1.3" }
concurrent_git_pool = { path = "../concurrent_git_pool" }
assert_cmd = "2"
async-trait = "0.1.81"
clap = { version = "3", features = ["derive"] }
color-eyre = "0.6.3"
color-spantrace = "0.2.1"
console = "0.15.8"
coredump = "0.1.2"
dialoguer = "0.11.0"
enum_dispatch = "0.3.13"
eyre = "0.6.12"
git2 = "0.19.0"
glob = "0.3.1"
indoc = "2.0.5"
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
itertools = "0.13.0"
lazy_static = "1"
maplit = "1"
multi_index_map = "0.11.0"
openssl-sys = { version = "0.9.103", features = ["vendored"] }
pathdiff = "0.2.1"
self_update = { version = "0.41.0", features = ["archive-tar", "compression-flate2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
slotmap = "1"
tempfile = "3"
time = { version = "0.3.36", features = ["formatting", "macros", "local-offset"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["io-util"] }
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
serde_with = { version = "3.9.0", features = ["macros"] }

[dev-dependencies]
assert_cmd = "2"

[package.metadata.cargo-machete]
ignored = ["openssl-sys"]
