[package]
name = "yb-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.4"
color-eyre = "0.6.2"
tokio = "1.20.1"
yb = { path = "../yb" }
concurrent_git_pool = { path = "../concurrent_git_pool" }
concurrent_git_pool_proc_macros = { path = "../concurrent_git_pool_proc_macros" }
