[package]
name = "yb-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2"
color-eyre = "0.6.3"
tokio = "1"
yb = { path = "../yb" }
concurrent_git_pool_proc_macros = { path = "../concurrent_git_pool_proc_macros" }
